<resources>
    <string name="app_name">MVC Motors</string>
    <string name="title_activity_rate_us">RateUsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Please fill this filter</string>
    <string name="invalid_password">Please fill this filter</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_places_to_visit">Places To Visit</string>
    <string name="tab_text_1">Cape Greco</string>
    <string name="tab_text_2">Fig Tree Bay</string>
    <string name="tab_text_3">Konnos Bay</string>
    <string name="tab_text_4">Blue Lagoon</string>
    <string name="tab_text_5">Love Bridge</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="title_activity_navigation_drawer">Welcome to MVC Motors!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">ATV and Buggies Rental</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_book">Book your ride</string>
    <string name="menu_aboutUs">About Us - Contact Us</string>
    <string name="menu_requirements">Requirements</string>
    <string name="menu_rateUs">Rate Us</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_placesToVisit">Places To Visit</string>
    <string name="title_activity_buggies">BuggiesActivity</string>


</resources>